# telegram-bot-download

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  README.md  REFACTOR_COMPLETE.md  TEST_ENHANCEMENT_COMPLETE.md  docker-compose.yml  main copy.py  main.py  mypy.ini  other.py  plan_bad-bot-reprocessing.md  plan_good-bot-catgirl.md  plan_phase4-error-handling.md  plan_phase5-finalization.md  plan_refactor-completion.md  plan_topic-thread-fix.md  plan_youtube-shorts-fix.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
app/config/: settings.py  strings.py
app/core/: exceptions.py  logging.py  types.py
app/features/: ai_truth_check.py  github_issue.py  good_bot_catgirl.py  mention_responder.py  reprocess_bad_bot.py
app/media/: detectors.py  downloader.py  gallery_dl.py  inspection.py  pipeline.py  postprocess.py  send.py  slideshow.py  ytdlp_profiles.py
app/telegram_bot/: app_factory.py  handlers.py  router.py  status_messenger.py
app/tests/: test_ai_truth_check.py  test_detectors.py  test_docker.py  test_downloader.py  test_facebook.py  test_filesystem.py  test_frozen_detection.py  test_github_issue.py  test_handlers.py  test_validation.py  test_ytdlp_profiles.py
app/utils/: cache.py  concurrency.py  database.py  filesystem.py  validation.py
implimentation_plans/: refactor_plan.md
tests/: test_detectors.py  test_facebook.py  test_frozen_detection.py
