[project]
name = "telegram-video-download-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.11.0.86",
    "python-telegram-bot>=22.1",
    "yt-dlp[default]>=2025.6.9",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]
