[project]
name = "telegram-video-download-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "gallery-dl>=1.29.7",
    "opencv-python>=4.11.0.86",
    "python-telegram-bot>=22.1",
    "yt-dlp[default]>=2025.6.9",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]
